--- a/src/app/pages/customer-search/customer-search.html
+++ b/src/app/pages/customer-search/customer-search.html
@@ -43,31 +43,33 @@
         <!-- Customer ID -->
         <div>
           <label class="block text-sm font-medium text-gray-600">Customer ID</label>
-          <input type="text" [(ngModel)]="searchForm.id" name="customerId" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="id" [(ngModel)]="searchForm.id"
+                        (ngModelChange)="onChange()" [disabled]="disabledFields.id"
+                 
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
         <!-- NAT ID -->
         <div>
           <label class="block text-sm font-medium text-gray-600">NAT ID</label>
-          <input type="text" [(ngModel)]="searchForm.nationalId" name="nationalId" (ngModelChange)="onNatIdChange()"
-                 class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500">
+          <input type="text" name="nationalId" [(ngModel)]="searchForm.nationalId"
+                           (ngModelChange)="onChange()" [disabled]="disabledFields.nationalId"
+                 class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
         <!-- Account Number -->
         <div>
           <label class="block text-sm font-medium text-gray-600">Account Number</label>
-          <input type="text" [(ngModel)]="searchForm.customerNumber" name="customerNumber" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="customerNumber" [(ngModel)]="searchForm.customerNumber"
+                    (ngModelChange)="onChange()" [disabled]="disabledFields.customerNumber"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
         <!-- GSM Number -->
         <div>
           <label class="block text-sm font-medium text-gray-600">GSM Number</label>
-          <input type="text" [(ngModel)]="searchForm.gsmNumber" name="gsmNumber" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="gsmNumber" [(ngModel)]="searchForm.gsmNumber"
+                      (ngModelChange)="onChange()" [disabled]="disabledFields.gsmNumber"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
@@ -76,8 +78,8 @@
         <!-- First Name -->
         <div>
           <label class="block text-sm font-medium text-gray-600">First Name</label>
-          <input type="text" [(ngModel)]="searchForm.firstName" name="firstName" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="firstName" [(ngModel)]="searchForm.firstName"
+                         (ngModelChange)="onChange()" [disabled]="disabledFields.firstName"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500"
                  [ngClass]="{'border-red-500': searchFormRef.submitted && !searchForm.firstName && !isFieldDisabled && searchForm.lastName}"> 
         </div>
@@ -85,16 +87,16 @@
         <!-- Middle Name -->
         <div>
           <label class="block text-sm font-medium text-gray-600">Middle Name</label>
-          <input type="text" [(ngModel)]="searchForm.middleName" name="middleName" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="middleName" [(ngModel)]="searchForm.middleName"
+                     (ngModelChange)="onChange()" [disabled]="disabledFields.middleName"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
         <!-- Last Name -->
         <div>
           <label class="block text-sm font-medium text-gray-600">Last Name</label>
-          <input type="text" [(ngModel)]="searchForm.lastName" name="lastName" (ngModelChange)="checkAnyFieldFilled()"
-                 [disabled]="isFieldDisabled"
+          <input type="text" name="lastName" [(ngModel)]="searchForm.lastName"
+                    (ngModelChange)="onChange()" [disabled]="disabledFields.lastName"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
 
@@ -143,43 +145,52 @@
         </button>
       </div>
 
-      <!-- BAŞARILI SONUÇLAR TABLOSU -->
       <div *ngIf="searchResults && searchResults.length > 0" class="overflow-x-auto border border-gray-200 rounded-lg shadow-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100 sticky top-0">
-            <tr>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Customer ID</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">NAT ID</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Account Number</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">GSM Number</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">First Name</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Middle Name</th>
-              <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Last Name</th>
-            </tr>
-          </thead>
-          <tbody class="bg-white divide-y divide-gray-100">
-            <tr *ngFor="let customer of searchResults; let i = index" class="hover:bg-orange-50 cursor-pointer transition duration-100">
-              <td class="px-4 py-3 whitespace-nowrap text-sm font-medium text-orange-600 underline">{{ customer.id }}</td>
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.nationalId }}</td>
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.customerNumber}}</td>
-<!--
-              @for (cont of customer.contactMediums; track cont.contactMediumId) {
-                @if(cont.primary==true){
-               <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ cont.value }}</td>
-                }
-              }-->
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{getGsmNumber(customer) }}</td>
-              
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.firstName }}</td>
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.middleName }}</td>
-              <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.lastName }}</td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="p-3 text-sm text-gray-500 text-right bg-gray-50 border-t border-gray-200 rounded-b-lg">
-          {{ searchResults.length }}/{{ searchResults.length }}
-        </div>
-      </div>
+  <div class="relative max-h-[79vh] overflow-y-auto"> <table class="min-w-full divide-y divide-gray-200">
+      
+      <thead class="bg-gray-100 sticky top-0 z-10"> <tr>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Customer ID</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">NAT ID</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Account Number</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">GSM Number</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">First Name</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Middle Name</th>
+          <th scope="col" class="px-4 py-3 text-left text-xs font-bold text-gray-600 uppercase tracking-wider">Last Name</th>
+        </tr>
+      </thead>
+      
+      <tbody class="bg-white divide-y divide-gray-100">
+        <tr *ngFor="let customer of searchResults; let i = index" class="hover:bg-orange-50 cursor-pointer transition duration-100">
+          <td class="px-4 py-3 whitespace-nowrap text-sm font-medium text-orange-600 underline">{{ customer.id }}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.nationalId }}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.customerNumber}}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{getGsmNumber(customer) }}</td>
+          
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.firstName }}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.middleName }}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.lastName }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div> <div class="flex justify-between mt-4">
+    <button (click)="prevPage()"
+            [disabled]="currentPage === 0 || isLoading"
+            class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 disabled:opacity-50">
+      Previous
+    </button>
+  
+    <span class="text-gray-700 font-medium">Page {{ currentPage + 1 }}</span>
+  
+    <button (click)="nextPage()"
+            [disabled]="!searchResults || searchResults.length < pageSize || isLoading"
+            class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 disabled:opacity-50">
+      Next
+    </button>
+  </div>
+  <div class="p-3 text-sm text-gray-500 text-right bg-gray-50 border-t border-gray-200 rounded-b-lg">
+    {{ searchResults.length }}/{{ searchResults.length }}
+  </div>
+</div>
     </div>
   </div>
 </div>
