--- a/src/app/pages/individual-customer-create/individual-customer-create.html
+++ b/src/app/pages/individual-customer-create/individual-customer-create.html
@@ -1,35 +1,13 @@
 <app-navbar></app-navbar>
 
 <div class="flex flex-col h-screen">
- 
+   
    
  
     <main class="flex flex-1 overflow-hidden bg-white/50"
           style="background-image: linear-gradient(to top right, #fefefe, #fcfcfc, #f5f5f5), url('assets/abstract-light-bg.png'); background-size: cover; background-position: center;">
-       
-        <aside class="w-20 backdrop-blur-md flex flex-col items-center py-4 space-y-5 shadow-inner border-r border-gray-300/30">
-           
-            <div class="w-16 h-16 flex flex-col items-center justify-center space-y-1 bg-orange-500 text-white rounded-lg shadow-lg cursor-pointer transition duration-200">
-                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.306-.356-1.857M7 20v-2c0-.656.126-1.306.356-1.857m0 0a5.002 5.002 0 019.288 0M12 10a5 5 0 00-9.288 0"></path></svg>
-                <span class="text-xs font-semibold">B2C</span>
-            </div>
- 
-            <div class="w-16 h-16 flex flex-col items-center justify-center space-y-1 text-gray-600 hover:text-gray-800 rounded-lg cursor-pointer transition duration-200">
-                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.58 23.58 0 0112 15c-3.18 0-6.23-.9-9-2.745M12 9v6m0-6a2 2 0 110-4 2 2 0 010 4zM2 13.5V6a2 2 0 012-2h16a2 2 0 012 2v7.5"></path></svg>
-                <span class="text-xs">B2B</span>
-            </div>
- 
-            <div class="w-16 h-16 flex items-center justify-center text-gray-600 hover:text-gray-800 rounded-lg cursor-pointer">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-            </div>
-            <div class="w-16 h-16 flex items-center justify-center text-gray-600 hover:text-gray-800 rounded-lg cursor-pointer">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.437a2 2 0 01-1.894-2.894l3.5-7A2 2 0 0114 10zM12 2v2m0 16v2"></path></svg>
-            </div>
-           
-            <div class="w-16 h-16 flex items-center justify-center text-gray-600 hover:text-gray-800 rounded-lg cursor-pointer mt-auto">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H5a3 3 0 01-3-3v-1m18-4h-4"></path></svg>
-            </div>
-        </aside>
+        
+        <app-sidebar></app-sidebar>
  
         <div class="flex-1 p-8 overflow-y-auto">
             <div class="bg-white/70 backdrop-blur-md p-8 rounded-lg shadow-2xl max-w-4xl mx-auto">
