--- a/src/app/pages/customer-create/address-info/address-info/address-info.html
+++ b/src/app/pages/customer-create/address-info/address-info/address-info.html
@@ -26,7 +26,7 @@
     <div class="grid grid-cols-2 gap-5">
       <div>
         <label class="text-sm font-medium">House Number</label>
-        <input type="text" formControlName="housenumber" class="w-full p-2 border rounded-md" />
+        <input type="text" formControlName="houseNumber" class="w-full p-2 border rounded-md" />
       </div>
       <div>
         <label class="text-sm font-medium">Description</label>
