--- a/src/app/pages/customer-search/customer-search.html
+++ b/src/app/pages/customer-search/customer-search.html
@@ -34,8 +34,8 @@
         <!-- Account Number -->
         <div>
           <label class="block text-sm font-medium text-gray-600">Account Number</label>
-          <input type="text" name="customerNumber" [(ngModel)]="searchForm.customerNumber"
-                    (ngModelChange)="onChange()" [disabled]="disabledFields.customerNumber"
+          <input type="text" name="customerNumber" [(ngModel)]="searchForm.accountNumber"
+                    (ngModelChange)="onChange()" [disabled]="disabledFields.accountNumber"
                  class="w-full p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-orange-500 focus:border-orange-500 disabled:bg-gray-100 disabled:text-gray-500">
         </div>
         
@@ -137,7 +137,7 @@
         <tr *ngFor="let customer of searchResults; let i = index" class="hover:bg-orange-50 cursor-pointer transition duration-100">
           <td class="px-4 py-3 whitespace-nowrap text-sm font-medium text-orange-600 underline">{{ customer.id }}</td>
           <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.nationalId }}</td>
-          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.customerNumber}}</td>
+          <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.billingAccountList?.[0]?.accountNumber || 'N/A'}}</td>
           <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{getGsmNumber(customer) }}</td>
           
           <td class="px-4 py-3 whitespace-nowrap text-sm text-gray-800">{{ customer.firstName }}</td>
