screens design updated

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
 <app-loader></app-loader>
-<app-individualcustomer-list></app-individualcustomer-list>
+<!---<app-individualcustomer-list></app-individualcustomer-list>-->
 <router-outlet></router-outlet>
