all information pages fixed

--- a/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
+++ b/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
@@ -10,7 +10,7 @@
             <div class="max-w-4xl mx-auto rounded-xl overflow-hidden bg-white shadow-xl">
                 
                 <div class="flex items-center p-3 md:p-4 bg-gray-200">
-                    <button class="flex items-center text-gray-700 hover:text-gray-900 focus:outline-none">
+                    <button (click)="goBackToSearch()" class="flex items-center text-gray-700 hover:text-gray-900 focus:outline-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
                         </svg>
