--- a/src/app/pages/customer-information-screen/address-information/address-information.html
+++ b/src/app/pages/customer-information-screen/address-information/address-information.html
@@ -119,12 +119,12 @@
 
             <div class="md:col-span-2 flex items-center pt-2">
                 <input 
-                    formControlName="isPrimary" 
-                    id="isPrimary" 
+                    formControlName="isDefault" 
+                    id="isDefault" 
                     type="checkbox" 
                     class="h-5 w-5 rounded border-gray-300 text-orange-600 focus:ring-orange-500 shadow-sm"
                 >
-                <label for="isPrimary" class="ml-2 block text-sm font-medium text-gray-700">Set as Default Address</label>
+                <label for="isDefault" class="ml-2 block text-sm font-medium text-gray-700">Set as Default Address</label>
             </div>
 
         </form>
