--- a/src/app/components/individualcustomer-list/individualcustomer-list.html
+++ b/src/app/components/individualcustomer-list/individualcustomer-list.html
@@ -51,7 +51,7 @@
                 <p class="text-xs text-gray-500 italic">
                   {{ addr.description }}
                 </p>
-                } @if (addr.default) {
+                } @if (addr.isDefault) {
                 <span
                   class="text-xs text-green-700 bg-green-100 px-2 py-0.5 rounded-md font-semibold"
                   >Default</span
